--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^8.18.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.8.0",
-    "three": "^0.176.0"
+    "react-intersection-observer": "^9.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
